[gd_scene load_steps=3 format=3 uid="uid://bvxkmcbn1tq2y"]

[ext_resource type="Script" path="res://addons/wfc/gui/option_panel.gd" id="1_5iwhv"]
[ext_resource type="PackedScene" uid="uid://ccs4vcc1ijrvi" path="res://addons/wfc/gui/mask_selector.tscn" id="2_auclk"]

[node name="OptionPanel" type="Panel"]
minimum_size = Vector2(0, 256)
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1_5iwhv" )

[node name="H" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
__meta__ = {
"_edit_layout_mode": 1,
"_edit_use_custom_anchors": false
}

[node name="L" type="VBoxContainer" parent="H"]
minimum_size = Vector2(256, 0)
offset_right = 256.0
offset_bottom = 600.0

[node name="SceneName" type="Label" parent="H/L"]
offset_right = 256.0
offset_bottom = 23.0

[node name="ScenePreview" type="TextureRect" parent="H/L"]
visible = false
offset_top = 27.0
offset_right = 256.0
offset_bottom = 27.0
ignore_texture_size = true
stretch_mode = 5

[node name="HSeparator" type="HSeparator" parent="H/L"]
offset_top = 27.0
offset_right = 256.0
offset_bottom = 31.0

[node name="Weight" type="SpinBox" parent="H/L"]
offset_top = 35.0
offset_right = 256.0
offset_bottom = 66.0
step = 0.1
page = 1.0

[node name="XRotations" type="HBoxContainer" parent="H/L"]
offset_top = 70.0
offset_right = 256.0
offset_bottom = 101.0

[node name="X" type="Label" parent="H/L/XRotations"]
offset_top = 2.0
offset_right = 61.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="90" type="CheckBox" parent="H/L/XRotations"]
offset_left = 65.0
offset_right = 126.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "90"

[node name="180" type="CheckBox" parent="H/L/XRotations"]
offset_left = 130.0
offset_right = 191.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "180"

[node name="270" type="CheckBox" parent="H/L/XRotations"]
offset_left = 195.0
offset_right = 256.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "270"

[node name="YRotations" type="HBoxContainer" parent="H/L"]
offset_top = 105.0
offset_right = 256.0
offset_bottom = 136.0

[node name="Y" type="Label" parent="H/L/YRotations"]
offset_top = 2.0
offset_right = 61.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Y"
horizontal_alignment = 1
vertical_alignment = 1

[node name="90" type="CheckBox" parent="H/L/YRotations"]
offset_left = 65.0
offset_right = 126.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "90"

[node name="180" type="CheckBox" parent="H/L/YRotations"]
offset_left = 130.0
offset_right = 191.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "180"

[node name="270" type="CheckBox" parent="H/L/YRotations"]
offset_left = 195.0
offset_right = 256.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "270"

[node name="ZRotations" type="HBoxContainer" parent="H/L"]
offset_top = 140.0
offset_right = 256.0
offset_bottom = 171.0

[node name="Z" type="Label" parent="H/L/ZRotations"]
offset_top = 2.0
offset_right = 61.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Z"
horizontal_alignment = 1
vertical_alignment = 1

[node name="90" type="CheckBox" parent="H/L/ZRotations"]
offset_left = 65.0
offset_right = 126.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "90"

[node name="180" type="CheckBox" parent="H/L/ZRotations"]
offset_left = 130.0
offset_right = 191.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "180"

[node name="270" type="CheckBox" parent="H/L/ZRotations"]
offset_left = 195.0
offset_right = 256.0
offset_bottom = 31.0
size_flags_horizontal = 3
text = "270"

[node name="VSeparator" type="VSeparator" parent="H"]
offset_left = 264.0
offset_right = 268.0
offset_bottom = 600.0

[node name="R" type="GridContainer" parent="H"]
offset_left = 276.0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
theme_override_constants/vseparation = 16
theme_override_constants/hseparation = 32
columns = 2

[node name="posx" type="VBoxContainer" parent="H/R"]
offset_right = 358.0
offset_bottom = 66.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="H/R/posx"]
offset_right = 358.0
offset_bottom = 26.0
text = "+X"

[node name="HBoxContainer" type="HBoxContainer" parent="H/R/posx"]
offset_top = 30.0
offset_right = 358.0
offset_bottom = 66.0
theme_override_constants/separation = 8

[node name="MaskSelector" parent="H/R/posx/HBoxContainer" instance=ExtResource( "2_auclk" )]

[node name="VSeparator" type="VSeparator" parent="H/R/posx/HBoxContainer"]
offset_left = 164.0
offset_right = 168.0
offset_bottom = 36.0

[node name="MaskSelector2" parent="H/R/posx/HBoxContainer" instance=ExtResource( "2_auclk" )]
offset_left = 176.0
offset_right = 332.0

[node name="negx" type="VBoxContainer" parent="H/R"]
offset_left = 390.0
offset_right = 748.0
offset_bottom = 66.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="H/R/negx"]
offset_right = 358.0
offset_bottom = 26.0
text = "-X"

[node name="HBoxContainer" type="HBoxContainer" parent="H/R/negx"]
offset_top = 30.0
offset_right = 358.0
offset_bottom = 66.0
theme_override_constants/separation = 8

[node name="MaskSelector" parent="H/R/negx/HBoxContainer" instance=ExtResource( "2_auclk" )]

[node name="VSeparator" type="VSeparator" parent="H/R/negx/HBoxContainer"]
offset_left = 164.0
offset_right = 168.0
offset_bottom = 36.0

[node name="MaskSelector2" parent="H/R/negx/HBoxContainer" instance=ExtResource( "2_auclk" )]
offset_left = 176.0
offset_right = 332.0

[node name="posy" type="VBoxContainer" parent="H/R"]
offset_top = 82.0
offset_right = 358.0
offset_bottom = 148.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="H/R/posy"]
offset_right = 358.0
offset_bottom = 26.0
text = "+Y"

[node name="HBoxContainer" type="HBoxContainer" parent="H/R/posy"]
offset_top = 30.0
offset_right = 358.0
offset_bottom = 66.0
theme_override_constants/separation = 8

[node name="MaskSelector" parent="H/R/posy/HBoxContainer" instance=ExtResource( "2_auclk" )]

[node name="VSeparator" type="VSeparator" parent="H/R/posy/HBoxContainer"]
offset_left = 164.0
offset_right = 168.0
offset_bottom = 36.0

[node name="MaskSelector2" parent="H/R/posy/HBoxContainer" instance=ExtResource( "2_auclk" )]
offset_left = 176.0
offset_right = 332.0

[node name="negy" type="VBoxContainer" parent="H/R"]
offset_left = 390.0
offset_top = 82.0
offset_right = 748.0
offset_bottom = 148.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="H/R/negy"]
offset_right = 358.0
offset_bottom = 26.0
text = "-Y"

[node name="HBoxContainer" type="HBoxContainer" parent="H/R/negy"]
offset_top = 30.0
offset_right = 358.0
offset_bottom = 66.0
theme_override_constants/separation = 8

[node name="MaskSelector" parent="H/R/negy/HBoxContainer" instance=ExtResource( "2_auclk" )]

[node name="VSeparator" type="VSeparator" parent="H/R/negy/HBoxContainer"]
offset_left = 164.0
offset_right = 168.0
offset_bottom = 36.0

[node name="MaskSelector2" parent="H/R/negy/HBoxContainer" instance=ExtResource( "2_auclk" )]
offset_left = 176.0
offset_right = 332.0

[node name="posz" type="VBoxContainer" parent="H/R"]
offset_top = 164.0
offset_right = 358.0
offset_bottom = 230.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="H/R/posz"]
offset_right = 358.0
offset_bottom = 26.0
text = "+Z"

[node name="HBoxContainer" type="HBoxContainer" parent="H/R/posz"]
offset_top = 30.0
offset_right = 358.0
offset_bottom = 66.0
theme_override_constants/separation = 8

[node name="MaskSelector" parent="H/R/posz/HBoxContainer" instance=ExtResource( "2_auclk" )]

[node name="VSeparator" type="VSeparator" parent="H/R/posz/HBoxContainer"]
offset_left = 164.0
offset_right = 168.0
offset_bottom = 36.0

[node name="MaskSelector2" parent="H/R/posz/HBoxContainer" instance=ExtResource( "2_auclk" )]
offset_left = 176.0
offset_right = 332.0

[node name="negz" type="VBoxContainer" parent="H/R"]
offset_left = 390.0
offset_top = 164.0
offset_right = 748.0
offset_bottom = 230.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="H/R/negz"]
offset_right = 358.0
offset_bottom = 26.0
text = "-z"

[node name="HBoxContainer" type="HBoxContainer" parent="H/R/negz"]
offset_top = 30.0
offset_right = 358.0
offset_bottom = 66.0
theme_override_constants/separation = 8

[node name="MaskSelector" parent="H/R/negz/HBoxContainer" instance=ExtResource( "2_auclk" )]

[node name="VSeparator" type="VSeparator" parent="H/R/negz/HBoxContainer"]
offset_left = 164.0
offset_right = 168.0
offset_bottom = 36.0

[node name="MaskSelector2" parent="H/R/negz/HBoxContainer" instance=ExtResource( "2_auclk" )]
offset_left = 176.0
offset_right = 332.0
